# ferrix

./: .gitignore  Cargo.toml  README.md  ferrix.tape
.github/workflows/: rust.yaml
src/: cli.rs  complete_command.rs  error.rs  ext_arr.rs  fs.rs  lib.rs  mem.rs  parser.rs  repl.rs  repl_v2.rs  sort.rs  system.rs  vdisk.rs
src/simple_ext4/: flemis_system.rs  fs.rs  fs_in_fs.rs  mkfs.rs  mod.rs  system.rs  types.rs
