[package]
name = "ferrix"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/taldoflemis/ferrix"
authors = ["André Willyan <willyanpublic@protonmail.com>", "Said Rodrigues <coderflemis@gmail.com>"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
clap-repl = "0.3.1"
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2.0.11"
winnow = { version = "0.6.26", features = ["alloc", "unstable-recover"] }
nix = { version = "0.29.0", features = ["fs"] }
windows-sys = "0.59.0"

[dev-dependencies]
tempfile = "3.16.0"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true

[profile.bench-profile]
inherits = "release"
debug = true

[profile.dist]
inherits = "release"
lto = "thin"
