[package]
name = "ferrix"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/taldoflemis/ferrix"
authors = ["André Willyan <willyanpublic@protonmail.com>", "Said Rodrigues <coderflemis@gmail.com>"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
clap-repl = "0.3.1"
miette = { version = "7.4.0", features = ["fancy"] }
thiserror = "2.0.11"
winnow = { version = "0.6.26", features = ["alloc", "unstable-recover"] }
nix = { version = "0.29.0", features = ["fs", "user"] }
windows-sys = { version = "0.59.0", features = ["Win32", "Win32_Storage", "Win32_Storage_FileSystem"] }
bytemuck = "1.21.0"
rayon = { version = "1.10.0" }
clean-path = "0.2.1"
anyhow = "1.0.96"
byte-unit = "5.1.6"
serde = { version = "1.0.218", features = ["derive"] }
crc32fast = "1.4.2"
bincode = "1.3.3"
bitvec = "1.0.1"
libc = "0.2.170"
fuser = { version = "0.15.1", features = ["serde", "serializable"] }
mmap = "0.1.1"
memmap = "0.7.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
tempfile = "3.16.0"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true

[profile.bench-profile]
inherits = "release"
debug = true

[profile.dist]
inherits = "release"
lto = "thin"
